1C-9: Wad added the ability to add new value for row

--- a/EP/Views/Home/Index.cshtml
+++ b/EP/Views/Home/Index.cshtml
@@ -29,6 +29,7 @@
                         <div ng-repeat="item in rowItem.Values">
                             {{ item.Value }}
                         </div>
+                        <md-icon ng-click="addValue(row.RowId, rowItem.ColumnId)" class="pointer text-success" md-font-library="material-icons">add</md-icon>
                     </td>
                     <td class="text-center">
                         <md-icon ng-click="deleteRow(row.RowId)" class="pointer text-danger" md-font-library="material-icons">delete</md-icon> 
